--- a/EncryptorApp/MainWindow.xaml
+++ b/EncryptorApp/MainWindow.xaml
@@ -10,7 +10,8 @@
     <Border Style="{StaticResource CoreBorderStyle}">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="48"></RowDefinition>
+                <RowDefinition Height="50"></RowDefinition>
+                <RowDefinition Height="1"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
@@ -20,7 +21,7 @@
             </Grid.ColumnDefinitions>
             <DockPanel Grid.Row="0">
                 <StackPanel Style="{StaticResource DataWindowHeaderStackPanelStyle}">
-                    <Image Source="gears.png" Style="{StaticResource UserControlImageStyle}" ></Image>
+                    <Image Source="gears.png" Height="20" Width="20" Style="{StaticResource UserControlImageStyle}" ></Image>
                     <Label Content="Encrypter" Style="{StaticResource DataWindowTitelLabelStyle}"></Label>
                 </StackPanel>
             </DockPanel>
@@ -32,7 +33,8 @@
                     </Button>
                 </StackPanel>
             </DockPanel>
-            <Grid Grid.Row="1" Grid.Column="0">
+            <Grid Grid.Row="1" Grid.ColumnSpan="2" Background="{StaticResource MainWindowSplitBorderBrush}"></Grid>
+            <Grid Grid.Row="2" Grid.Column="0">
                 <Grid Name="ChangePasswordGrid" Visibility="Visible" Width="Auto" Margin="10,10,10,10">
                     <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
                         <Grid Margin="0,0,0,8">
@@ -45,7 +47,7 @@
                     </StackPanel>
                 </Grid>
             </Grid>
-            <Grid Grid.Row="1" Grid.Column="1">
+            <Grid Grid.Row="2" Grid.Column="1">
                 <Grid Name="GetPasswordGrid" Visibility="Visible" Width="Auto" Margin="10,10,10,10">
                     <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
                         <Grid Margin="0,0,0,8">
